# claw-trader

./: .gitignore  Makefile  README.md  README.zh-CN.md  README.zh-TW.md  TESTING.md
api/: README.md  errors.md  openapi.yaml
api/examples/: archiveStrategyDraft.json  createStrategy.json  (+25 more)
backtest-engine/: .env.example  Dockerfile  config.yaml  docker-compose.yml  go.mod  go.sum
data-aggregator/: Dockerfile  README.md  config.test.yaml  config.yaml  docker-compose.test.yml  docker-compose.yml  go.mod  go.sum
design/: trader.pen
desktop-client/: .env.example  .eslintrc.cjs  .gitignore  CONFIGURATION.md  claw-config.example.json  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: design-alignment.md  migration-strategy-workspace.md  theme-parity.md
e2e/: run.sh
sandbox-service/: Dockerfile  README.md  config.yaml  pyproject.toml
sandbox-service/src/api/: __init__.py  config.py  logging.py  main.py  schema.py
sandbox-service/src/callback/: __init__.py  client.py
sandbox-service/src/claw/: data.py  indicators.py  screener.py
sandbox-service/src/pool/: __init__.py  config.py  master.py  messages.py  rlimits.py  worker.py
sandbox-service/src/worker/: __init__.py  job_runner.py
sandbox-service/tests/: conftest.py  test_api.py  test_callback.py  test_config.py  test_framework.py  test_pool.py  test_smoke.py
scripts/: e2e.sh  pre-commit  refresh-golden-files.sh
service-api/: .env.example  Dockerfile  config.yaml  docker-compose.yml  go.mod
(+654 files in other folders)
