[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claw-sandbox-service"
version = "0.1.0"
description = "Long-lived Python sandbox service with prefork worker pool for claw-trader"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "httpx==0.27.2",
    "psycopg[binary]==3.2.3",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pyyaml==6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "ruff==0.6.9",
    "mypy==1.11.2",
    "types-PyYAML",
    "types-requests",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short --strict-markers"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
packages = ["claw", "pool", "worker", "callback", "api"]
mypy_path = "src"
# user code (dynamically loaded) is untyped; tolerate the small untyped areas
allow_untyped_calls = false
disallow_any_generics = false
